--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://0.0.0.0:3306/HH?useSSL=false&useUnicode=true&characterEncoding=utf8
-spring.datasource.username=zin
-spring.datasource.password=xptmxm12
+spring.datasource.url=jdbc:mysql://prscsl3.cdslgeg4iosa.ap-northeast-2.rds.amazonaws.com:3306/prscsl
+spring.datasource.username=prscsl
+spring.datasource.password=qkralsemffp
 
 spring.jpa.hibernate.ddl-auto=update
 
