--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ server.servlet.encoding.enabled=true
 server.servlet.encoding.force=true
 
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+
+cloud.aws.stack.auto=false
