--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,8 @@ dependencies {
     runtimeOnly 'mysql:mysql-connector-java'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+
     implementation group: 'io.awspring.cloud', name: 'spring-cloud-starter-aws', version: '2.4.2'
 
 //     JWT
