--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,8 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://prscsl3.cdslgeg4iosa.ap-northeast-2.rds.amazonaws.com:3306/prscsl
-spring.datasource.username=prscsl
-spring.datasource.password=qkralsemffp
-
+spring.datasource.url=jdbc:mysql://springboot-database.cmqzwulad4jo.ap-northeast-2.rds.amazonaws.com:3306/postdata
+spring.datasource.username=admin
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
-
 # echo 'spring-boot-security-jwt-hanghae-assignment-spring-boot-security-jwt-secret-key' | base64
 
 
@@ -16,8 +14,8 @@ server.servlet.encoding.force=true
 
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 
-cloud.aws.credentials.access-Key=AKIAWD3SVJ6V5AWW4Q6P 
-cloud.aws.credentials.secret-Key=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
+cloud.aws.credentials.access-Key=
+cloud.aws.credentials.secret-Key=
 cloud.aws.stack.auto=false
 
 # AWS S3 Service bucket
