--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -29,22 +29,9 @@ jobs:
       with:
         java-version: '11'
         distribution: 'temurin'
-        
-    - name: Build with Gradle
-      uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
-      with:
-        arguments: build
 
-    - name: Make zip file
-      run: zip -r ./prscsl.zip .
-      shell: bash
-      
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ secrets.AWS_REGION }}
-        
-    - name: Upload to S3
-      run: aws s3 cp --region ap-northeast-2 ./prscs.zip s3://$S3_BUCKET_NAME/
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+    
+    - name: Build with Gradle
+      run: ./gradlew clean build
