--- a/.github/workflows/gradle2.yml
+++ b/.github/workflows/gradle2.yml
@@ -9,12 +9,12 @@ name: Java CI with Gradle
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "main" ]
 
-permissions:
-  contents: read
+env:
+  S3_BUCKET_NAME: prscs-test2
 
 jobs:
   build:
