--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -9,11 +9,12 @@ name: ehldjfk
 on:
   push:
     branches: ["main"]
-  pull_request:
-    branches: ["main"]
 
 env:
   S3_BUCKET_NAME: prscs-test2
+  
+permissions:
+  contents: read
 
 jobs:
   build:
@@ -22,55 +23,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    
     - name: Set up JDK 11
       uses: actions/setup-java@v3
       with:
         java-version: '11'
         distribution: 'temurin'
         
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    
     - name: Build with Gradle
-      run: ./gradlew clean build
-
-    - name: Make Directory
-      run: mkdir -p deploy
-
-    - name: Copy Jar
-      run: cp ./build/libs/*.jar ./deploy
-      
-    - name: Copy appspec.yml
-      run: cp appspec.yml ./deploy
-
-    - name: Copy script
-      run: cp ./scripts/*.sh ./deploy
-      
-    - name: Make zip file
-      run: zip -r ./prscs.zip ./deploy
-      shell: bash
-          
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
+      uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ secrets.AWS_REGION }}
-        
-    - name: Upload to S3
-      run: aws s3 cp --region ap-northeast-2 ./prscs.zip s3://$S3_BUCKET_NAME/
-      
-    # Deploy
-    - name: Deploy
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ secrets.AWS_REGION }}
-      run:
-        aws deploy create-deployment 
-        --application-name prscs-test2
-        --deployment-group-name prscs-group2
-        --file-exists-behavior OVERWRITE 
-        --s3-location bucket=prscs-test2,bundleType=zip,key=prscs.zip
-
-
+        arguments: clean build -x test
